--- a/roles/build_report/templates/report.j2
+++ b/roles/build_report/templates/report.j2
@@ -21,7 +21,7 @@ collapsible: true
   {% include 'header.j2' %}
 <section>
 <center>
-<h1>Ansible Network Automation Example Report</h1>
+<h1>Ansible Hybrid Cloud Automation Example Report</h1>
 </center>
 <table class="main_net_table">
     <thead>
@@ -36,7 +36,7 @@ collapsible: true
         <tr>
             <td class="summary_info">
               <div id="hostname">
-              <p class="hostname"><img class="router_image" src="router.png" alt="picture of network device">{{ hostvars[network_switch].ansible_net_hostname }}</p>
+              <p class="hostname"><img class="router_image" src="router.png" alt="picture of network device">hostname blah</p>
             </div>
               <div id="net_info_div">
               <table class="net_info">
@@ -82,7 +82,7 @@ collapsible: true
     </tbody>
 </table>
 <center><p>Created with</p><br><img src="webpage_logo.png" width="300" alt="red hat ansible automation platform logo">
-<p>The source code to create this report can be found at <a href="https://github.com/network-automation/toolkit">https://github.com/network-automation/toolkit</a><br><br>
+<p>The source code to create this report can be found at <a href="https://github.com/ansible-cloud/aws_demos">https://github.com/ansible-cloud/aws_demos</a><br><br>
 If you are new to Ansible Automation check out the following links:<br>
 <a href="https://docs.ansible.com/ansible/latest/user_guide/intro_getting_started.html">Getting Started</a><br>
 <a target="_blank" href="https://ansible.com/workshops">Free hands-on workshops</a><br>
