--- a/roles/build_report/templates/ansible.j2
+++ b/roles/build_report/templates/ansible.j2
@@ -7,23 +7,23 @@
 <tbody>
   <tr>
     <td>Ansible user</td>
-    <td class="sub_net_info">{{ hostvars[localhost]['ansible_user'] }}</td>
+    <td class="sub_net_info">asdf</td>
   </tr>
   <tr>
     <td>Ansible Mgmt IP</td>
-    <td class="sub_net_info">{{ hostvars[localhost]['ansible_host'] }}</td>
+    <td class="sub_net_info">asdf</td>
   </tr>
   <tr>
     <td>Ansible core version</td>
-    <td class="sub_net_info">{% for group in hostvars[localhost]['ansible_version']['string']|default("Unknown") %}{{ group }} {% endfor %}</td>
+    <td class="sub_net_info">asdf</td>
   </tr>
   <tr>
     <td>Ansible Python</td>
-    <td class="sub_net_info">{{ hostvars[localhost]['ansible_playbook_python']|default("Unknown") }} </td>
+    <td class="sub_net_info">asdf</td>
   </tr>
   <tr>
     <td>Python version</td>
-    <td class="sub_net_info">{{ hostvars[localhost]['ansible_net_python_version']|default("Unknown") }} </td>
+    <td class="sub_net_info">asdf</td>
   </tr>
 </tbody>
 </table>
