--- a/roles/build_report/templates/report.j2
+++ b/roles/build_report/templates/report.j2
@@ -26,10 +26,8 @@ collapsible: true
 <table class="main_net_table">
     <thead>
         <tr>
-            <th>Network Device</th>
-            <th>Layer 1</th>
-            <th>Layer 2</th>
-            <th>Layer 3</th>
+            <th>AWS Public Cloud</th>
+            <th>Region</th>
         </tr>
     </thead>
     <tbody>
@@ -69,13 +67,7 @@ collapsible: true
             </td>
 
             <td>
-            lexi
-            </td>
-            <td>
-            seansean
-            </td>
-            <td>
-            blahblah
+            {% include 'vpc.j2' %}
             </td>
         </tr>
 
