--- a/roles/build_report/templates/ansible.j2
+++ b/roles/build_report/templates/ansible.j2
@@ -7,7 +7,7 @@
 <tbody>
   <tr>
     <td>Ansible user</td>
-    <td class="sub_net_info">asdf</td>
+    <td class="sub_net_info">{{ ansible_user_id }}</td>
   </tr>
   <tr>
     <td>Ansible Mgmt IP</td>
