--- a/roles/build_report/templates/report.j2
+++ b/roles/build_report/templates/report.j2
@@ -27,14 +27,14 @@ collapsible: true
     <thead>
         <tr>
             <th>AWS Public Cloud</th>
-            <th>Region</th>
+            <th class="region_column">Region</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td class="summary_info">
               <div id="hostname">
-              <p class="hostname"><img class="router_image" src="router.png" alt="picture of network device">hostname blah</p>
+              <p class="hostname"><img class="router_image" src="aws.png" alt="picture of network device">hostname blah</p>
             </div>
               <div id="net_info_div">
               <table class="net_info">
