--- a/roles/build_report/templates/report.j2
+++ b/roles/build_report/templates/report.j2
@@ -34,7 +34,7 @@ collapsible: true
         <tr>
             <td class="summary_info">
               <div id="hostname">
-              <p class="hostname"><img class="router_image" src="aws.png" alt="picture of network device">hostname blah</p>
+              <p class="hostname"><img class="router_image" src="aws.png" alt="picture of cloud">AWS Cloud</p>
             </div>
               <div id="net_info_div">
               <table class="net_info">
