--- a/roles/build_report/templates/report.j2
+++ b/roles/build_report/templates/report.j2
@@ -26,7 +26,7 @@ collapsible: true
 <table class="main_net_table">
     <thead>
         <tr>
-            <th>AWS Public Cloud</th>
+            <th>Public Cloud</th>
             <th class="region_column">Region</th>
         </tr>
     </thead>
@@ -34,7 +34,8 @@ collapsible: true
         <tr>
             <td class="summary_info">
               <div id="hostname">
-              <p class="hostname"><img class="router_image" src="aws.png" alt="picture of cloud">AWS Cloud</p>
+              <img class="router_image" src="aws.png" alt="picture of cloud">
+              <br><p class="hostname">AWS</p>
             </div>
               <div id="net_info_div">
               <table class="net_info">
