--- a/roles/build_report/templates/vpc.j2
+++ b/roles/build_report/templates/vpc.j2
@@ -3,17 +3,17 @@
 <div>
 <h3>{{ ec2_region | default('unknown') }}</h3>
 <div class="net_content">
-<p class="description">There are {{ vpc_info.vpcs | length }} AWS VPCs configured and {{ ec2_instance_info.instances | length }} instances on region {{ ec2_region | default('unknown') }}
+<p class="description">There are <p class="bold_me">{{ vpc_info.vpcs | length }}</p> AWS VPCs configured and <p class="bold_me">{{ ec2_instance_info.instances | length }}</p> instances on region {{ ec2_region | default('unknown') }}
 
 <table class="net_info">
 <tbody>
   <tr>
-    <td>{{ '%-38s'|format('VPC name')}}</td>
-    <td class="sub_net_info">{{ '%-28s'|format('VPC id') }}</td>
-    <td class="sub_net_info">{{ '%-12s'|format('instances') }}</td>
-    <td class="sub_net_info">{{ '%-18s'|format('cidr_block') }}</td>
-    <td class="sub_net_info">{{ '%-26s'|format('cidr block associations') }}</td>
-    <td class="sub_net_info">{{ '%-22s'|format('IGW') }}</td>
+    <th>class="vpc_info">{{ '%-38s'|format('VPC name')}}</th>
+    <th class="vpc_info">{{ '%-28s'|format('VPC id') }}</th>
+    <th class="vpc_info">{{ '%-12s'|format('instances') }}</th>
+    <th class="vpc_info">{{ '%-18s'|format('cidr_block') }}</th>
+    <th class="vpc_info">{{ '%-26s'|format('cidr block associations') }}</th>
+    <th class="vpc_info">{{ '%-22s'|format('IGW') }}</th>
   </tr>
   {% for vpc in vpc_info.vpcs %}
   <tr>
