--- a/roles/build_report/templates/report.j2
+++ b/roles/build_report/templates/report.j2
@@ -41,20 +41,20 @@ collapsible: true
               <table class="net_info">
               <tbody>
                 <tr>
-                  <td>Platform</td>
-                  <td class="sub_net_info">1.2.5</td>
+                  <td>Boto3 Version</td>
+                  <td class="sub_net_info">{{ py_cmd.stdout | default ('unknown')}}</td>
                 </tr>
                 <tr>
-                  <td>Code Version</td>
-                  <td class="sub_net_info">1.2.6</td>
+                  <td>AWS user</td>
+                  <td class="sub_net_info">{{ aws_user | default('unknown') }}</td>
                 </tr>
                 <tr>
-                  <td>Model</td>
-                  <td class="sub_net_info">1.2.7</td>
+                  <td>Account ID</td>
+                  <td class="sub_net_info">{{ whoami.account | default('unknown') }}</td>
                 </tr>
                 <tr>
-                  <td>Serial Number</td>
-                  <td class="sub_net_info">1.2.8</td>
+                  <td>Account Alias</td>
+                  <td class="sub_net_info">{{ whoami.account_alias | default ('unknown')}}</td>
                 </tr>
               </tbody>
               </table>
