--- a/roles/build_report/templates/vpc.j2
+++ b/roles/build_report/templates/vpc.j2
@@ -3,14 +3,14 @@
 <div>
 <h3>{{ ec2_region | default('unknown') }}</h3>
 <div class="net_content">
-<p class="description">There are <div id="bold_me">{{ vpc_info.vpcs | length }}</div> AWS VPCs configured and <div id="bold_me">{{ ec2_instance_info.instances | length }}</div> instances on region {{ ec2_region | default('unknown') }}
+<p class="description">There are <strong>{{ vpc_info.vpcs | length }}</strong> AWS VPCs configured and <strong>{{ ec2_instance_info.instances | length }}</strong> instances on region {{ ec2_region | default('unknown') }}
 
 <table class="net_info">
 <tbody>
   <tr>
     <th class="vpc_info">{{ '%-38s'|format('VPC name')}}</th>
     <th class="vpc_info">{{ '%-28s'|format('VPC id') }}</th>
-    <th class="vpc_info">{{ '%-12s'|format('instances') }}</th>
+    <th class="vpc_info">{{ '%-14s'|format('instances') }}</th>
     <th class="vpc_info">{{ '%-18s'|format('cidr_block') }}</th>
     <th class="vpc_info">{{ '%-26s'|format('cidr block associations') }}</th>
     <th class="vpc_info">{{ '%-22s'|format('IGW') }}</th>
@@ -19,7 +19,7 @@
   <tr>
   <td>{{ '%-38s'|format(vpc.tags['Name'] | default('Unspecified, missing name tag')) }}</td>
   <td>{{ '%-28s' | format(vpc.id) }}</td>
-  <td>{{ '%-12s'|format(ec2_instance_info.instances | selectattr('vpc_id', 'equalto', vpc.id ) | length) -}}</td>
+  <td>{{ '%-14s'|format(ec2_instance_info.instances | selectattr('vpc_id', 'equalto', vpc.id ) | length) -}}</td>
   <td>{{ '%-18s'|format(vpc.cidr_block) }}</td>
   <td>{{ '%-26s' | format(vpc.cidr_block_association_set | length | default('0')) }}</td>
   {% set ns = namespace(igwfound=False) %}
