--- a/roles/build_report/templates/vpc.j2
+++ b/roles/build_report/templates/vpc.j2
@@ -5,7 +5,7 @@
 <div>
 <h3>{{ key | default('unknown') }}</h3>
 <div class="net_content">
-<p class="description">There are <strong>{{ value[vpc_info.vpcs] | length }}</strong>
+<p class="description">There are <strong>{{ value.vpc_info.vpcs | length }}</strong>
 
 <table class="net_info">
 <tbody>
