--- a/roles/build_report/templates/report.j2
+++ b/roles/build_report/templates/report.j2
@@ -42,7 +42,7 @@ collapsible: true
               <tbody>
                 <tr>
                   <td>Boto3 Version</td>
-                  <td class="sub_net_info">{{ py_cmd | default ('unknown')}}</td>
+                  <td class="sub_net_info">{{ boto3_version | default ('unknown')}}</td>
                 </tr>
                 <tr>
                   <td>AWS user</td>
