--- a/roles/build_report/templates/vpc.j2
+++ b/roles/build_report/templates/vpc.j2
@@ -6,9 +6,9 @@
 {% set stopped = value.ec2_instance_info.instances | selectattr('state.name', 'equalto', "stopped") | length %}
 {% set total = value.ec2_instance_info.instances | length %}
 <div>
-<h3><div id="region_title">{{ key | default('unknown') }}</div> &nbsp;&nbsp;<div class="instances_highlight">{% if total | length > 0 %} - {% if running | length > 0 %}<div class="instances_running">{% endif %}{{ running }} instances running{% if running | length > 0 %}</div>{% endif %} - {{ stopped }} stopped ({{ total }} total){% endif %}</div></h3>
+<h3><div id="region_title">{{ key | default('unknown') }}</div> &nbsp;&nbsp;<div class="instances_highlight">{% if total > 0 %} - {% if running > 0 %}<div class="instances_running">{% endif %}{{ running }} instances running{% if running > 0 %}</div>{% endif %} - {{ stopped }} stopped ({{ total }} total){% endif %}</div></h3>
 <div class="net_content">
-<p class="description">There are <strong>{{ value.vpc_info.vpcs | length }}</strong> AWS VPCs configured and <strong>{{ value.ec2_instance_info.instances | length }}</strong> instances on region {{ key | default('unknown') }}</p>
+<p class="description">There are <strong>{{ value.vpc_info.vpcs | length }}</strong> AWS VPCs configured and <strong>{{ total }}</strong> instances on region {{ key | default('unknown') }}</p>
 
 <table class="net_info">
 <tbody>
