--- a/roles/build_report/templates/vpc.j2
+++ b/roles/build_report/templates/vpc.j2
@@ -6,7 +6,7 @@
 {% set stopped = value.ec2_instance_info.instances | selectattr('state.name', 'equalto', "stopped") | length %}
 {% set total = value.ec2_instance_info.instances | length %}
 <div>
-<h3><div id="region_title">{{ key | default('unknown') }}</div><div class="instances_highlight">{% if total > 0 %}{% if running > 0 %}<div class="instances_running">{% endif %}<span class="ui-accordion-header-icon ui-icon ui-icon-power"></span>{{ running }} instances running{% if running > 0 %}</div>{% endif %}<div class="instances_running"><span class="ui-accordion-header-icon ui-icon ui-icon-stop"></span>{{ stopped }} stopped ({{ total }} total){% endif %}</div></h3>
+<h3><div id="region_title">{{ key | default('unknown') }}</div><div class="instances_highlight">{% if total > 0 %}{% if running > 0 %}<div class="instances_running">{% endif %}<span class="ui-accordion-header-icon ui-icon ui-icon-power"></span>{{ running }} instances running{% if running > 0 %}</div>{% endif %}<div class="instances_stopped"><span class="ui-accordion-header-icon ui-icon ui-icon-stop"></span>{{ stopped }} stopped ({{ total }} total)</div>{% endif %}</div></h3>
 <div class="net_content">
 <p class="description">There are <strong>{{ value.vpc_info.vpcs | length }}</strong> AWS VPCs configured and <strong>{{ total }}</strong> instances on region {{ key | default('unknown') }}</p>
 
