--- a/roles/build_report/files/css/main.css
+++ b/roles/build_report/files/css/main.css
@@ -260,5 +260,5 @@ th.vpc_info {
 }
 
 .ui-state-active .ui-icon, .ui-button:active .ui-icon {
-  background-image: url("images/ui-icons_ffffff_256x240.png") !important;
+  background-image: url("http://code.jquery.com/ui/1.12.1/themes/base/images/ui-icons_ffffff_256x240.png") !important;
 }
