--- a/roles/build_report/templates/vpc.j2
+++ b/roles/build_report/templates/vpc.j2
@@ -15,7 +15,8 @@
   <tr>
     <th class="vpc_info">VPC name</th>
     <th class="vpc_info">VPC id</th>
-    <th class="vpc_info">instances</th>
+    <th class="vpc_info">instances running</th>
+    <th class="vpc_info">instances stopped</th>
     <th class="vpc_info">CIDR block'</th>
     <th class="vpc_info" id="cidr_assoc">CIDR block associations</th>
     <th class="vpc_info">IGW</th>
@@ -24,7 +25,8 @@
   <tr>
   <td>{{ vpc.tags['Name'] | default('Unspecified, missing name tag') }}</td>
   <td>{{ vpc.id }}</td>
-  <td>{{ value.ec2_instance_info.instances | selectattr('vpc_id', 'equalto', vpc.id ) | length -}}</td>
+  <td>{{ value.ec2_instance_info.instances | selectattr('vpc_id', 'equalto', vpc.id ) | selectattr('state.name', 'equalto', "running") | length -}}</td>
+  <td>{{ value.ec2_instance_info.instances | selectattr('vpc_id', 'equalto', vpc.id ) | selectattr('state.name', 'equalto', "stopped") | length -}}</td>
   <td>{{ vpc.cidr_block }}</td>
   <td>{{ vpc.cidr_block_association_set | length | default('0') }}</td>
   {% set ns = namespace(igwfound=False) %}
