--- a/roles/build_report/templates/vpc.j2
+++ b/roles/build_report/templates/vpc.j2
@@ -15,10 +15,10 @@
   <tr>
     <th class="vpc_info">VPC name</th>
     <th class="vpc_info">VPC id</th>
-    <th class="vpc_info">instances running</th>
-    <th class="vpc_info">instances stopped</th>
+    <th class="vpc_info">instances <br> running</th>
+    <th class="vpc_info">instances <br> stopped</th>
     <th class="vpc_info">CIDR block'</th>
-    <th class="vpc_info" id="cidr_assoc">CIDR block associations</th>
+    <th class="vpc_info" id="cidr_assoc">CIDR block<br> associations</th>
     <th class="vpc_info">IGW</th>
   </tr>
   {% for vpc in value.vpc_info.vpcs %}
