--- a/roles/build_report/templates/vpc.j2
+++ b/roles/build_report/templates/vpc.j2
@@ -17,7 +17,7 @@
     <th class="vpc_info">VPC id</th>
     <th class="vpc_info">instances <br> running</th>
     <th class="vpc_info">instances <br> stopped</th>
-    <th class="vpc_info">CIDR block'</th>
+    <th class="vpc_info">CIDR block</th>
     <th class="vpc_info" id="cidr_assoc">CIDR block<br> associations</th>
     <th class="vpc_info">IGW</th>
   </tr>
