--- a/roles/build_report/templates/vpc.j2
+++ b/roles/build_report/templates/vpc.j2
@@ -25,10 +25,10 @@
   <tr>
   <td>{{ vpc.tags['Name'] | default('Unspecified, missing name tag') }}</td>
   <td>{{ vpc.id }}</td>
-  <td>{{ value.ec2_instance_info.instances | selectattr('vpc_id', 'equalto', vpc.id ) | selectattr('state.name', 'equalto', "running") | length -}}</td>
-  <td>{{ value.ec2_instance_info.instances | selectattr('vpc_id', 'equalto', vpc.id ) | selectattr('state.name', 'equalto', "stopped") | length -}}</td>
+  <td style="text-align: center;">{{ value.ec2_instance_info.instances | selectattr('vpc_id', 'equalto', vpc.id ) | selectattr('state.name', 'equalto', "running") | length -}}</td>
+  <td style="text-align: center;">{{ value.ec2_instance_info.instances | selectattr('vpc_id', 'equalto', vpc.id ) | selectattr('state.name', 'equalto', "stopped") | length -}}</td>
   <td>{{ vpc.cidr_block }}</td>
-  <td>{{ vpc.cidr_block_association_set | length | default('0') }}</td>
+  <td style="text-align: center;">{{ vpc.cidr_block_association_set | length | default('0') }}</td>
   {% set ns = namespace(igwfound=False) %}
   {%- for igw in value.igw_info.internet_gateways -%}
   {% if igw['attachments'] | length > 0 %}
