--- a/roles/build_report/templates/vpc.j2
+++ b/roles/build_report/templates/vpc.j2
@@ -25,18 +25,20 @@
   <tr>
   <td>{{ vpc.tags['Name'] | default('Unspecified, missing name tag') }}</td>
   <td>{{ vpc.id }}</td>
-  <td style="text-align: center;">{{ value.ec2_instance_info.instances | selectattr('vpc_id', 'equalto', vpc.id ) | selectattr('state.name', 'equalto', "running") | length -}}</td>
-  <td style="text-align: center;">{{ value.ec2_instance_info.instances | selectattr('vpc_id', 'equalto', vpc.id ) | selectattr('state.name', 'equalto', "stopped") | length -}}</td>
+  <td style="text-align: center;">{{ value.ec2_instance_info.instances | selectattr('vpc_id', 'equalto', vpc.id ) | selectattr('state.name', 'equalto', "running") | length }}</td>
+  <td style="text-align: center;">{{ value.ec2_instance_info.instances | selectattr('vpc_id', 'equalto', vpc.id ) | selectattr('state.name', 'equalto', "stopped") | length }}</td>
   <td>{{ vpc.cidr_block }}</td>
   <td style="text-align: center;">{{ vpc.cidr_block_association_set | length | default('0') }}</td>
   {% set ns = namespace(igwfound=False) %}
   {%- for igw in value.igw_info.internet_gateways -%}
   {% if igw['attachments'] | length > 0 %}
+  {% if igw['attachments'][0]['vpc_id'] is defined %}
   {% if igw['attachments'][0]['vpc_id'] == vpc.id %}
   <td>{{ igw['internet_gateway_id'] }}</td>
   {% set ns.igwfound = True %}
   {% endif %}
   {% endif %}
+    {% endif %}
   {%- endfor -%}
   {% if not ns.igwfound %}
   <td>No IGW found</td>
