--- a/roles/build_report/templates/vpc.j2
+++ b/roles/build_report/templates/vpc.j2
@@ -26,10 +26,10 @@
   <td>{{ vpc.tags['Name'] | default('Unspecified, missing name tag') }}</td>
   <td>{{ vpc.id }}</td>
   {% set vpc_instances = value.ec2_instance_info.instances | selectattr('vpc_id', 'equalto', vpc.id ) %}
-  <td style="text-align: center;">{{ vpc_instances | selectattr('state.name', 'equalto', "running") | length | default("0") }}</td>
+  <td>sean1</td>
   <td>sean</td>
   <td>{{ vpc.cidr_block }}</td>
-  <td style="text-align: center;">{{ vpc.cidr_block_association_set | length | default('0') }}</td>
+  <td style="text-align:center;">{{ vpc.cidr_block_association_set | length | default('0') }}</td>
   {% set ns = namespace(igwfound=False) %}
   {% for igw in value.igw_info.internet_gateways %}
   {% if igw['attachments'] | length > 0 %}
