--- a/roles/build_report/templates/vpc.j2
+++ b/roles/build_report/templates/vpc.j2
@@ -9,6 +9,17 @@
 <h3><div id="region_title">{{ key | default('unknown') }}</div><div class="instances_highlight">{% if total > 0 %}{% if running > 0 %}<div class="instances_running">{% endif %}<span class="ui-accordion-header-icon ui-icon ui-icon-power"></span>{{ running }} instances running{% if running > 0 %}</div>{% endif %}<div class="instances_stopped"><span class="ui-accordion-header-icon ui-icon ui-icon-stop"></span>{{ stopped }} stopped ({{ total }} total)</div>{% endif %}</div></h3>
 <div class="net_content">
 <p class="description">There are <strong>{{ value.vpc_info.vpcs | length }}</strong> AWS VPCs configured and <strong>{{ total }}</strong> instances on region {{ key | default('unknown') }}</p>
+{% set total_empty_vpc %}
+{% for vpc in value.vpc_info.vpcs %}
+{% set instances_with_vpc = value.ec2_instance_info.instances | selectattr('vpc_id', 'defined') %}
+{% if instances_with_vpc | selectattr('vpc_id', 'equalto', vpc.id ) | length > 0 %}
+{% set total_empty_vpc = total_empty_vpc + 1 %} 
+{% endif %}
+{% endfor %}
+{% if total_empty_vpc > 0 %}
+<p class="opportunities">Optimization Opportunities</p> 
+<div class="empty_vpc"><span class="ui-accordion-header-icon ui-icon ui-icon-info"></span>{{ total_empty_vpc }} empty VPCs</div>.
+{% endif %}
 
 <table class="net_info">
 <tbody>
