--- a/roles/build_report/templates/vpc.j2
+++ b/roles/build_report/templates/vpc.j2
@@ -17,8 +17,10 @@
 {% endif %}
 {% endfor %}
 {% if nsvpc.total_empty_vpc > 0 %}
+<div class="opportunities_box">
 <p class="opportunities">Optimization Opportunities</p> 
-<div class="empty_vpc"><span class="ui-accordion-header-icon ui-icon ui-icon-info"></span>{{ nsvpc.total_empty_vpc }} empty VPCs</div>.
+<div class="empty_vpc"><span class="ui-accordion-header-icon ui-icon ui-icon-info"></span>{{ nsvpc.total_empty_vpc }} empty VPCs</div>
+</div>
 {% endif %}
 
 <table class="net_info">
