--- a/roles/build_report/files/css/main.css
+++ b/roles/build_report/files/css/main.css
@@ -262,3 +262,11 @@ th.vpc_info {
 .ui-state-active .ui-icon, .ui-button:active .ui-icon {
   background-image: url("http://code.jquery.com/ui/1.12.1/themes/base/images/ui-icons_ffffff_256x240.png") !important;
 }
+
+p.opportunities {
+  color: #333333;
+}
+
+.opportunities_box {
+  background-color: #5f6062;
+}
