--- a/roles/build_report_azure/templates/azure.j2
+++ b/roles/build_report_azure/templates/azure.j2
@@ -4,9 +4,9 @@
 
 <div id="accordion">
 {% for location in real_location %}
-{% set running = azure_vars.vms | selectattr('location', 'equalto', location.name) | selectattr('power_state', 'equalto', "running") | length %}
-{% set stopped = azure_vars.vms | selectattr('location', 'equalto', location.name) | selectattr('power_state', 'equalto', "stopped") | length %}
-{% set total = azure_vars.vms | selectattr('location', 'equalto', location.name) | length %}
+{% set running = azure_vars.azure_vms.vms | selectattr('location', 'equalto', location.name) | selectattr('power_state', 'equalto', "running") | length %}
+{% set stopped = azure_vars.azure_vms.vms | selectattr('location', 'equalto', location.name) | selectattr('power_state', 'equalto', "stopped") | length %}
+{% set total = azure_vars.azure_vms.vms | selectattr('location', 'equalto', location.name) | length %}
 <div>
 <h3><div id="region_title">{{ location.name }} - {{ location["metadata"]["physicalLocation"] | default('unknown') }}</div></h3>
 <div class="net_content">
