--- a/roles/build_report_azure/files/css/main.css
+++ b/roles/build_report_azure/files/css/main.css
@@ -2,8 +2,7 @@ p.hostname {
   color: #000000;
   font-weight: bolder;
   font-size: large;
-  margin: auto;
-  width: 50%;
+  text-align: center;
 }
 
 #subtable {
@@ -194,7 +193,10 @@ div#net_content {
 
 img.router_image {
     vertical-align: middle;
-    padding: 0px 10px 10px 10px;
+    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 table.net_info {
