--- a/roles/build_report_azure/templates/azure.j2
+++ b/roles/build_report_azure/templates/azure.j2
@@ -17,19 +17,21 @@
   <tr>
     <th class="vpc_info">Virtual Network name</th>
     <th class="vpc_info">Address Prefixes </th>
-    <th class="vpc_info">Subnets<br> running</th>
-    <th class="vpc_info">Subnet Details <br> stopped</th>
-    <th class="vpc_info">replace me</th>
+    <th class="vpc_info">Subnets</th>
+    <th class="vpc_info">Subnet Details</th>
+    <th class="vpc_info">Network Interfaces</th>
     <th class="vpc_info" id="cidr_assoc">replace me 2</th>
   </tr>
 {% set region_specific_networks = azure_vars.azure_networks.virtualnetworks | selectattr('location', 'equalto', location.name) %}
+{% set region_specific_nics = azure_vars.network_interfaces.networkinterfaces | selectattr('location', 'equalto', location.name) %}
 {% for virtual_network in region_specific_networks %}
+{% set virtual_network_specific_nics = region_specific_nics | selectattr('virtual_network.name', 'equalto', virtual_network.name) %}
   <tr>
   <td>{{ virtual_network.name | default("unknown") }}</td>
   <td>{% for prefix in virtual_network.address_prefixes %}{{ prefix }}{% endfor %}</td>
   <td style="text-align: center;">{{ virtual_network.subnets | length }}</td>
-  <td style="text-align: center;">{% for subnet in virtual_network.subnets %}{{ subnet.name }}{{ subnet.address_prefix }}{% endfor %}</td>
-  <td>test5</td>
+  <td style="text-align: center;">{% for subnet in virtual_network.subnets %} {{ subnet.name }}{{ subnet.address_prefix }}{% endfor %}</td>
+  <td>{{ virtual_network_specific_nics | length }}</td>
   <td style="text-align:center;">test6</td>
   </tr>
 {% endfor %}  
