--- a/roles/build_report_azure/templates/azure.j2
+++ b/roles/build_report_azure/templates/azure.j2
@@ -20,7 +20,7 @@
     <th class="vpc_info">Subnets</th>
     <th class="vpc_info">Subnet Details</th>
     <th class="vpc_info">Network<br>Interfaces</th>
-    <th class="vpc_info" id="cidr_assoc">replace me 2</th>
+    <th class="vpc_info" id="cidr_assoc">Network Interface Details</th>
   </tr>
 {% set region_specific_networks = azure_vars.azure_networks.virtualnetworks | selectattr('location', 'equalto', location.name) %}
 {% set region_specific_nics = azure_vars.network_interfaces.networkinterfaces | selectattr('location', 'equalto', location.name) %}
@@ -28,11 +28,11 @@
 {% set virtual_network_specific_nics = region_specific_nics | selectattr('virtual_network.name', 'equalto', virtual_network.name) %}
   <tr>
   <td>{{ virtual_network.name | default("unknown") }}</td>
-  <td>{% for prefix in virtual_network.address_prefixes %}{{ prefix }}{% endfor %}</td>
+  <td>{% for prefix in virtual_network.address_prefixes %}<div id="table_item">{{ prefix }}</div>{% endfor %}</td>
   <td style="text-align: center;">{{ virtual_network.subnets | length }}</td>
-  <td>{% for subnet in virtual_network.subnets %} {{ subnet.name }} {{ subnet.address_prefix }}{% endfor %}</td>
+  <td>{% for subnet in virtual_network.subnets %}<div id="table_item">{{ subnet.name }} {{ subnet.address_prefix }}</div>{% endfor %}</td>
   <td style="text-align: center;">{{ virtual_network_specific_nics | length }}</td>
-  <td>{% for nic in virtual_network_specific_nics %} {{ nic.name }} {{ nic.mac_address }}{% endfor %}</td>
+  <td>{% for nic in virtual_network_specific_nics %}<div id="table_item">{{ nic.name }} {{ nic.mac_address }}</div>{% endfor %}</td>
   </tr>
 {% endfor %}  
 </tbody>
