--- a/roles/build_report_azure/templates/azure.j2
+++ b/roles/build_report_azure/templates/azure.j2
@@ -32,7 +32,7 @@
   <td style="text-align: center;">{{ virtual_network.subnets | length }}</td>
   <td>{% for subnet in virtual_network.subnets %}<div id="table_item">{{ subnet.name }} {{ subnet.address_prefix }}</div>{% endfor %}</td>
   <td style="text-align: center;">{{ virtual_network_specific_nics | length }}</td>
-  <td>{% for nic in virtual_network_specific_nics %}<div id="table_item">{{ nic.name }} {{ nic.mac_address }}</div>{% endfor %}</td>
+  <td><table>{% for nic in virtual_network_specific_nics %}<tr><td>{{ nic.name }}</td><td>{{ nic.mac_address }}</td></tr>{% endfor %}</table></td>
   </tr>
 {% endfor %}  
 </tbody>
